fixed some bugs related to image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <h2>Home</h2>
         <div id="main-home">
-            <img src="../src/SHLee_PPP.jpg" alt="SangHyup Lee's Photo">
+            <img src="src/shlee_profile.jpg" alt="SangHyup Lee's Photo">
             <p>
                 I am SangHyup Lee, a student at the Boston University majoring in Computer Science & Economics
                 joint major. I am currently working as PM intern under the supervision of Hack4Impact.
