updated some contents

--- a/certs.html
+++ b/certs.html
@@ -34,12 +34,12 @@
 
           <ul>
             <li>
-              <strong>Web Development Fundamentals</strong>  
-              <br>Learned HTML, CSS, and basic responsive web design techniques.
+              <strong>English for Journalism - Coursera</strong>  
+              <br> Learned about English Writing, Speaking and researching skills for journalism.
             </li>
 
             <li>
-              <strong>Data Analysis Basics</strong>  
+              <strong>Google Data Analysis - Coursera</strong>  
               <br>Focused on data handling, basic statistics, and analytical thinking.
             </li>
           </ul>
@@ -53,6 +53,9 @@
             <li>JavaScript Fundamentals</li>
             <li>Git & GitHub</li>
             <li>Python Programming</li>
+            <li>SQL Basics</li>
+            <li>Data Analysis with Excel</li>
+            <li>Jira</li>
           </ul>
         </section>
 
