--- a/projects.html
+++ b/projects.html
@@ -44,10 +44,11 @@
         </section>
 
         <section>
-          <h3>Academic Web Projects</h3>
+          <h3>Phonics Projects</h3>
           <p>
-            A collection of coursework projects developed during Computer Science
-            classes at Boston University.
+            Working as Product Manager intern at Hack4Impact, I contributed to the development of a 
+            phonics learning platform. This project involved collaborating with a team of developers and 
+            designers to create an engaging and educational experience for users.
           </p>
           <ul>
             <li>Practiced front-end fundamentals with HTML and CSS.</li>
@@ -59,8 +60,7 @@
         <section>
           <h3>Future Projects</h3>
           <p>
-            This section will be expanded with additional projects,
-            including JavaScript-based applications and data-driven tools.
+            This section will be expanded with additional projects.
           </p>
         </section>
 
@@ -68,8 +68,8 @@
           <h3>JavaScript Calculator (Coming Soon)</h3>
 
           <p>
-            A JavaScript calculator will be added to this section as part of MP1.
-            The calculator will include two input boxes, multiple operation
+            A JavaScript calculator.
+            The calculator includes two input boxes, multiple operation
             buttons, and a dynamic output display.
           </p>
         </section>
