--- a/references.html
+++ b/references.html
@@ -28,6 +28,17 @@
 
       <main>
         <h2>References</h2>
+        <table>
+          <tr>
+            <th>Name</th>
+            <th>Relationship</th>
+            <th>Contact Information</th>
+          </tr>
+          <tr>
+            <td>Professor Davoodi</td>
+            <td>CS391 A1 Professor</td>
+            <td>Email: davoodi@bu.edu</td>
+          </tr>
         </table>
 
       </main>
