added some description

--- a/experience.html
+++ b/experience.html
@@ -28,8 +28,6 @@
 
       <main>
         <h2>Experience</h2>
-
-        <!-- Experience 1 -->
         <section>
           <h3>Korea Real Estate Board</h3>
           <p><em>Public Service Agent</em> | South Korea</p>
@@ -42,20 +40,18 @@
           </ul>
         </section>
 
-        <!-- Experience 2 -->
         <section>
-          <h3>Boston University – Student Projects</h3>
+          <h3>ATE! Nutrition Tracking App</h3>
           <p><em>Computer Science & Economics Student</em></p>
-          <p>2024 – Present</p>
+          <p>09/2025 – 12/2025</p>
 
           <ul>
             <li>Worked on multiple academic projects involving HTML, CSS, JavaScript, and Python.</li>
             <li>Developed structured and responsive webpages following web accessibility and design guidelines.</li>
-            <li>Applied analytical thinking from economics coursework to technical problem-solving.</li>
+            <li>Applied agile methodologies to manage and iterate on project development.</li>
           </ul>
         </section>
 
-        <!-- Experience 3 -->
         <section>
           <h3>Personal Projects & Self-Study</h3>
           <p><em>Independent Learner</em></p>
